--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,14 @@ on:
     branches:
     - main
 
+  pull_request:
+    branches:
+    - main
+
+  release:
+    types:
+    - published
+
 jobs:
   build:
     name: build
