--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,6 @@ on:
     branches:
     - main
 
-  release:
-    types:
-    - published
-
 jobs:
   build:
     name: build
@@ -31,7 +27,6 @@ jobs:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        # enable-AzPSSession: true
 
     - name: Build module - Publish
       shell: pwsh
@@ -44,12 +39,34 @@ jobs:
         }
         $key = Get-OpenAuthenticodeAzKey @keyParams
 
-        Set-Content test.ps1 'Write-Host test'
+        $moduleDir = Join-Path $pwd.Path 'TestAzureCodeOIDC'
+        $psm1Path = Join-Path $moduleDir 'TestAzureCodeOIDC.psm1'
+
+        $null = New-Item $moduleDir -ItemType Directory
+        Set-Content $psm1Path 'Write-Host test'
         $signParams = @{
-            FilePath = 'test.ps1'
+            FilePath = $psm1Path
             Key = $key
             TimeStampServer = 'http://timestamp.digicert.com'
         }
         Set-OpenAuthenticodeSignature @signParams
-        Get-Content test.ps1
-        Get-OpenAuthenticodeSignature -FilePath test.ps1 -SkipCertificateCheck | Select *
+
+        $repoParams = @{
+            Name = 'LocalRepo'
+            SourceLocation = $pwd.Path
+            PublishLocation = $pwd.Path
+            InstallationPolicy = 'Trusted'
+        }
+        Register-PSRepository @repoParams
+        try {
+            Publish-Module -Path $moduleDir -Repository $repoParams.Name
+        }
+        finally {
+            Unregister-PSRepository -Name $repoParams.Name
+        }
+
+    - name: Capture Built module
+      uses: actions/upload-artifact@v3
+      with:
+        name: PSModule
+        path: '*.nupkg'
