try purposeful failure

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,3 +70,8 @@ jobs:
       with:
         name: PSModule
         path: output/*.nupkg
+
+    - name: purpose fail
+      shell: pwsh
+      run: |
+        throw "abc"
