--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,8 +17,9 @@ jobs:
         workflow: ci.yml
         commit: ${{ github.sha }}
         name: PSModule
+        path: ${{ github.workspace }}
 
     - name: check dir
       shell: pwsh
       run: |
-        Get-ChildItem $pwd -Recurse -Force
+        Get-ChildItem '${{ github.workspace }}' -Recurse -Force
