--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     name: publish
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
 
     steps:
@@ -17,10 +18,8 @@ jobs:
         workflow: ci.yml
         commit: ${{ github.sha }}
         name: PSModule
-        # path: ${{ github.workspace }}
 
     - name: check dir
       shell: pwsh
       run: |
-        Get-Item ./*.nupkg | Select-Object FullName
-        # Get-ChildItem '${{ github.workspace }}' -Recurse -Force
+        Get-Item ./*.nupkg | Select-Object -ExpandProperty FullName
