--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,19 @@ jobs:
       uses: actions/checkout@v3
 
     - name: OIDC Login to Azure
+      if: github.ref == 'refs/heads/main'
       uses: azure/login@v1
       with:
         client-id: ${{ secrets.AZURE_CLIENT_ID }}
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Build module - Publish
+    - name: Sign module
+      if: github.ref == 'refs/heads/main'
       shell: pwsh
       run: |
-        Import-Module ./OpenAuthenticode
+        Install-Module -Name OpenAuthenticode -Force
+        Import-Module OpenAuthenticode
 
         $keyParams = @{
             VaultName = '${{ secrets.AZURE_VAULT_NAME }}'
@@ -47,6 +50,11 @@ jobs:
             Verbose = $true
         }
         Get-ChildItem $moduleDir | Set-OpenAuthenticodeSignature @signParams
+
+    - name: Publish module
+      shell: pwsh
+      run: |
+        $moduleDir = Join-Path $pwd.Path 'TestAzureCodeOIDC'
 
         $publishLocation = Join-Path $pwd.Path 'output'
         $null = New-Item $publishLocation -ItemType Directory
@@ -70,4 +78,3 @@ jobs:
       with:
         name: PSModule
         path: output/*.nupkg
-
